# Opusv1

./: .gitignore  ANALYSIS_CONCLUSIONS.md  CALIBRATION_SIGN_OFF.md  Dockerfile  TUHO_debt_repayment_table.xlsx  TUHO_waterfall_table.xlsx  ZAKLJUCAK_OPUS.md  alembic.ini  excel_oborovo.xlsx  excel_tuhobic.xlsx  fix_rate_schedule.py  main.py  opuscore.db  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci.yml
app/: __init__.py  builder.py  runner.py  session.py  validation.py
core/domain/: capex.py  equity.py  inputs.py  opex.py
core/engines/: bess_engine.py  hybrid_engine.py  representative_weeks.py  wind_engine.py
core/finance/: goal_seek.py  monte_carlo.py  sensitivity.py
core/tax/: generic_tax.py
docs/: DEBT_SIZING.md  PHASE3_COMPLETION_REPORT.md  phase5_backlog.md
domain/: __init__.py  constants.py  inputs.py  model_state.py  models.py  period_engine.py  presets.py
domain/analytics/: __init__.py  bess.py  lcoe.py  monte_carlo.py  scenarios.py
domain/capex/: __init__.py  capex_breakdown.py  idc.py  (+1 more)
io/: __init__.py
io_/: __init__.py  excel_exporter.py  excel_integration.py  excel_parser.py  project_manager.py
persistence/: database.py  models.py  repository.py
projects/: solarka_20260421_093215.json  solarka_20260421_093217.json
reporting/: excel_export.py  fid_deck.py  pdf_export.py
scripts/: diagnose_sculpting.py
src/: app.py  app_builder.py
tests/: conftest.py  test_bess_engine.py  test_capex_tree.py  test_depreciation.py  test_domain.py  test_equity.py  test_financing.py  test_generic_tax.py  test_goal_seek.py  test_hybrid_engine.py  test_hybrid_lp_engine.py  test_inputs.py  test_monte_carlo.py  test_oborovo_parity.py  test_opex.py  test_period_engine.py  test_persistence.py  test_regression.py  test_repository.py  test_revenue.py  test_sensitivity.py  test_tax.py  test_waterfall_dscr.py  test_wind_engine.py  test_xirr.py
ui/: __init__.py
utils/: __init__.py  cache.py  export.py  financial.py  logging_config.py  rate_curve.py  sensitivity.py  ui_constants.py
(+68 files in other folders)
